--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.1",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue3-toastify": "^0.2.8",
-    "vuetify": "^3.8.1"
+    "vuetify": "^3.8.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
