--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "template_vue_3",
   "private": true,
   "type": "module",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "scripts": {
     "dev": "vite",
     "build": "npm run type-check && npm run build-only",
@@ -15,6 +15,8 @@
     "@date-io/dayjs": "^3.2.0",
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
+    "@tanstack/vue-query": "^5.80.2",
+    "@tanstack/vue-query-devtools": "^5.80.2",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
