--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 #hacer un copy y paste de este archivo y ponerle .env.local cuando estés en
 #desarrollo y hacer un archivo .env.production cuando se traslade a producción
 #de API
+#VITE_PORT=
 # VITE_VUE_APP_API_URL=http://localhost/
 #TWO_FACTOR_AUTH=true
